--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                     I am always keen on learning new skills, in fact I gained a few in my free time outside of any professional education
                                     (SQL, R). 
                                     I happily learn from others and humbly acknowledge that learning in my field never really stops. <br>
-                                    My current goal: learn Shiny apps!
+                                    My current learning goal: Shiny apps!
                                     </p>
                                 </div>
                             </div> <!-- end row -->
