--- a/R-markdown-report.html
+++ b/R-markdown-report.html
@@ -90,7 +90,7 @@
                             <header class="entry__header">
     
                                 <h1 class="entry__title">
-                                    Automating analytical reports with R Markdown.
+                                    Automating analytical reports with R&nbspMarkdown.
                                 </h1>
 
                             </header>
