--- a/R-markdown-slides.html
+++ b/R-markdown-slides.html
@@ -95,7 +95,7 @@
                             <header class="entry__header">
     
                                 <h1 class="entry__title">
-                                    R Markdown. Creating slides program&shy;mati&shy;cally.
+                                    R&nbspMarkdown. Creating slides program&shy;mati&shy;cally.
                                 </h1>
 
                                 <div class="entry__meta">
