--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ permalink: /404.html
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="refresh" content="0; URL='https://mokosm.github.io'" />
+        <meta http-equiv="refresh" content="0; URL='https://martina-augustin.github.io'" />
         <title>404 - redirect</title>
     </head>
     
