--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Martina Mokosova Augustin</title>
+    <title>Martina A.</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
