--- a/index.html
+++ b/index.html
@@ -89,21 +89,24 @@
 
                             <header class="entry__header entry__header--narrower">
     
-                                <h1 class="entry__title">
+                                <h1 class="entry__title" style="margin-bottom:0%">
                                     Martina A.
                                 </h1>
+                                <p>data analyst | creative mind | curious</p>
     
                             </header>
 
                             <div class="row">
                                 <div class="column lg-12">
                                     <p class="lead">
-                                    Data analyst, creative mind, curious. My initial training was in maths and stats, and I then gained 
-                                    professional experience in public and private companies. Tasks I have worked on include exploratory data analysis, 
-                                    process optimisation, data visualisation, statistical  and spatial analysis.
-                                    I am always keen on learning new skills, in fact I gained a few in my free time outside of any professional education
-                                    (SQL, R). 
-                                    I happily learn from others and humbly acknowledge that learning in my field never really stops. <br>
+                                    <!-- Data analyst, creative mind, curious. <br> -->
+                                    Following my degree in quantitative methods in economics
+                                    I gained professional experience in data analysis, 
+                                    process optimisation, data visualisation, statistical and spatial data analysis.<br>
+                                    Keen on improving my skills, I have learned SQL, R, GIS and other tools in my free time and enjoy reading on various topics - 
+                                    from learning about more advanced techniques in data processing to design, visualisation and
+                                    effective data story telling.<br> 
+                                    <!-- I acknowledge that learning in my field never really stops. <br> -->
                                     My current learning goal: Shiny apps!
                                     </p>
                                 </div>
@@ -152,11 +155,11 @@
                                             <a href="#">Data visualisation</a>
                                         </span>
                                     </div>
-                                    <h2 class="entry__title"><a href="R-data-viz.html">Data visualisation. Presenting origin-destination data.</a></h2>
+                                    <h2 class="entry__title"><a href="R-data-viz.html">Three graphs to analyse commuting patterns in te UK</a></h2>
                                 </div>
                                 <div class="entry__excerpt">
                                     <p>
-                                        Analysis of Census 2011 commuting patterns to investigate possible post-lockdown mobility behaviours.
+                                        Analysis of Census 2011 commuting patterns to investigate potential post-lockdown mobility behaviours.
                                     </p>
                                 </div>
                                 <a class="entry__more-link" href="R-data-viz.html">Read More</a>
@@ -177,7 +180,7 @@
                                             <a href="#">Data communication</a>
                                         </span>
                                     </div>
-                                    <h2 class="entry__title"><a href="R-markdown-report.html">Automating analytical reports with R Markdown.</a></h2>
+                                    <h2 class="entry__title"><a href="R-markdown-report.html">Automating analytical reports with R Markdown</a></h2>
                                 </div>
                                 <div class="entry__excerpt">
                                     <p>
@@ -202,7 +205,7 @@
                                             <a href="#">Data communication</a>
                                         </span>
                                     </div>
-                                    <h2 class="entry__title"><a href="R-markdown-slides.html">Creating slides programmatically with R Markdown.</a></h2>
+                                    <h2 class="entry__title"><a href="R-markdown-slides.html">Creating slides programmatically with R Markdown</a></h2>
                                 </div>
                                 <div class="entry__excerpt">
                                     <p>
@@ -247,7 +250,7 @@
                 </div>
                 <div class="column lg-6 md-6 tab-12">
                     <div class="ss-copyright">
-                        <span>© MartinaAug 2023</span> 
+                        <span>© Martina Augustin 2024</span> 
                         <span>Web design by <a href="https://www.styleshout.com/" target="_blank">StyleShout</a></span>
                     </div>
                 </div>
