--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     Following my degree in quantitative methods in economics
                                     I gained professional experience in data analysis, 
                                     process optimisation, data visualisation, statistical and spatial data analysis.<br>
-                                    Keen on improving my skills, I have learned SQL, R, GIS and other tools in my free time and enjoy reading on various topics - 
+                                    Keen on improving my skills, I have learned SQL, R, GIS and other tools in my free time and enjoy exploring various topics - 
                                     from learning about more advanced techniques in data processing to design, visualisation and
                                     effective data story telling.<br> 
                                     <!-- I acknowledge that learning in my field never really stops. <br> -->
