--- a/R-data-viz.html
+++ b/R-data-viz.html
@@ -93,7 +93,7 @@
                             <header class="entry__header">
     
                                 <h1 class="entry__title">
-                                    Three graphs to analyse commuting patterns in te UK
+                                    Three graphs to analyse commuting patterns in the UK
                                 </h1>
 
                             </header>
