--- a/R-markdown-slides.html
+++ b/R-markdown-slides.html
@@ -117,7 +117,7 @@
                                         based on coding scripts can be updated by simply reloading the webpage, much to the image of a one-stop-shop for all reporting tasks
                                         in contrast to the hassle of copy/paste new plots into Powerpoint slides. </p> 
 
-                                    <h3>Example 1 - Work presentation about R</h3>
+                                    <h3>Example 1 - Presentation about R</h3>
                                     
                                     <p>In my company, a few R enthusiasts and I presented to the team about 
                                         using R for data analysis. We agreed that it would be a shame to speak about R and 
