--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
 
+    <!-- favicon
+    ================================================== -->
+    <link rel="icon" type="image/png" href="images/main/MA4.png">
+
 </head>
 
 
@@ -89,6 +93,10 @@
 
                             <header class="entry__header entry__header--narrower">
     
+                                <!-- <h1 class="entry__title" style="margin-bottom:0%; font-family: Squada One, sans-serif; 
+                                font-weight: 400; font-style: normal; line-height: 0.55; letter-spacing: -.3rem; ">
+                                    <span style="color: #ed254e;">martina</span><br><span style="color: #93b5c6; margin-left: 12rem;">augustin</span>
+                                </h1> -->
                                 <h1 class="entry__title" style="margin-bottom:0%">
                                     Martina A.
                                 </h1>
@@ -117,18 +125,13 @@
                                 <div class="column lg-12">
                                     <p class="lead" style="margin-bottom: 1%;">
                                     <!-- Data analyst, creative mind, curious. <br> -->
-                                    I am a data analyst with 5+ years of professional experience in data visualisation, 
-                                    statistical and spatial data analysis and process optimisation, R enthusiast, GIS fan, 
-                                    SQL speaker.</p>
-                                    <p class="lead" style="margin-bottom: 1%;">
-                                        Since my MSc degree in quantitative methods in economics I kept 
-                                    <!-- I gained professional experience in data analysis,  -->
-                                    <!-- process optimisation, data visualisation, statistical and spatial data analysis.<br> -->
-                                    on improving my skills in my free time and enjoy exploring various topics - 
-                                    from learning about more advanced techniques in data analysis and processing to design, visualisation and
-                                    effective data story telling.</p>
-                                    <!-- I acknowledge that learning in my field never really stops. <br> -->
-                                    <p class="lead">My current learning goal: Shiny apps!
+                                    I am a dedicated data analyst with over 5 years of professional experience specializing in data visualization, 
+                                    statistical and spatial data analysis, and process optimization. As an R enthusiast, GIS fan, and proficient 
+                                    SQL user, I continuously seek to enhance my skills and explore new methodologies.<br>
+                                    With an MSc degree in Quantitative Methods in Economics, my passion for data has driven me to continually 
+                                    improve my expertise. In my free time, I enjoy delving into advanced data analysis techniques, honing my 
+                                    skills in design and visualization, and mastering the art of effective data storytelling.<br>
+                                    Currently, I am focused on learning Shiny apps to expand my capabilities and bring interactive data applications to life.
                                     </p>
                                 </div>
                             </div> <!-- end row -->
@@ -176,11 +179,13 @@
                                             <a href="#">Data visualisation</a>
                                         </span>
                                     </div>
-                                    <h2 class="entry__title"><a href="R-data-viz.html">Three graphs to analyse commuting patterns in the UK</a></h2>
+                                    <h2 class="entry__title"><a href="R-data-viz.html">Three Graphs to Analyze Commuting Patterns in the UK</a></h2>
                                 </div>
                                 <div class="entry__excerpt">
                                     <p>
-                                        Analysis of Census 2011 commuting patterns to investigate potential post-lockdown mobility behaviours.
+                                        Explore the commuting patterns across the UK and understand potential traffic impacts if public transport 
+                                        users switch to private cars. The analysis, using geo-spatial insight and data visualization, offers 
+                                        insights based on pre-pandemic data.
                                     </p>
                                 </div>
                                 <a class="entry__more-link" href="R-data-viz.html">Read More</a>
@@ -201,11 +206,13 @@
                                             <a href="#">Data communication</a>
                                         </span>
                                     </div>
-                                    <h2 class="entry__title"><a href="R-markdown-report.html">Automating analytical reports with R Markdown</a></h2>
+                                    <h2 class="entry__title"><a href="R-markdown-report.html">Automating Analytical Reports with R Markdown</a></h2>
                                 </div>
                                 <div class="entry__excerpt">
                                     <p>
-                                    Showcase of creating automated reports by using R programming language.
+                                        Learn how to automate the creation of analytical reports with R Markdown, transforming raw data into 
+                                        interactive and visually engaging reports. This example demonstrates the power of R for streamlining 
+                                        feedback and making data-driven decisions.
                                     </p>
                                 </div>
                                 <a class="entry__more-link" href="R-markdown-report.html">Read More</a>
@@ -226,11 +233,12 @@
                                             <a href="#">Data communication</a>
                                         </span>
                                     </div>
-                                    <h2 class="entry__title"><a href="R-markdown-slides.html">Creating slides programmatically with R Markdown</a></h2>
+                                    <h2 class="entry__title"><a href="R-markdown-slides.html">Creating Slides Programmatically with R Markdown</a></h2>
                                 </div>
                                 <div class="entry__excerpt">
                                     <p>
-                                        Examples of slides made with R, and the benefits as compared to conventional tools.
+                                        Explore how R Markdown can revolutionize your presentations, making them dynamic, easily updatable, and visually 
+                                        striking. Whether you're showcasing data analysis or providing quick reports, see why this method is worth the effort.
                                     </p>
                                 </div>
                                 <a class="entry__more-link" href="R-markdown-slides.html">Read More</a>
